This commit fixes some layout issues in the CSS including colum display. This also adds a readme.

--- a/Assets/style.css
+++ b/Assets/style.css
@@ -1,46 +1,56 @@
     body {
         background-color: rgb(251, 199, 232);
         color: rgb(116, 0, 77);
-        align-items: center;
+        text-align: center;
+        /* padding-left: 5px; */
     }
 
 
     .hero {
-            background-image: url(background-image.jpg);
-            color: white;
-            font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-            padding: 30px 50px; /* Decrease the top padding to move it higher */
-            border: 5px solid white;
+        background-image: url(background-image.jpg);
+        color: white;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        padding: 30px 50px;
+        border: 5px solid white;
+        text-align: center; /* Center text horizontally */
      }
 
      h1 {
         background-color: rgba(255, 255, 255, 0.5);
         border: 3px solid pink;
-        max-width: 0 auto;
-        padding: 10px;
-        margin: 10px;
+        /* padding: 10px; */
         border-radius: 6px;
-        text-align: center;
+        margin: 10px;
      }
 
      nav {
-        display: flex;
-        justify-content: center;
+        list-style-type: none;
+        padding: 0;
+        /*display: flex;
+        /*justify-content: center;  Center navigation links horizontally */
+        /*margin-top: 20px; /* Add margin to separate from header title */
     }
 
     nav ul {
         list-style-type: none;
-        margin: 0;
         padding: 0;
+        /*ist-style-type: none;*/
+       /* margin: 0;*/
+
+       /* padding: 0;*/
     }
     
     nav ul li {
         display: inline;
-        margin-right: 20px;
-    }
+     margin-right: 20px;
+}
+        /* display: inline; */
+        /* margin-right: 20px; */
+
 
     nav ul li a {
-       color: rgb(255, 237, 245);
+        /* display: flex; */
+        color: rgb(255, 237, 245);
     }
 
     nav ul li a:hover {
@@ -80,16 +90,21 @@
     }
 
     .container {
+        flex-wrap: wrap;
+    }
+
+    .container {
         background-color: rgb(217, 176, 228);
         width: 0 auto;
         height: 0 auto;
-        display: flex; /* Use Flexbox */
+        flex-wrap: wrap;
+        display: flex; 
         flex-direction: column; /* Stack items vertically */
         align-items: center; /* Center items horizontally */
         text-align: center; /* Center text */
         padding: 10px;
         border-radius: 6px;
-        border-style:dotted
+        border-style:dotted;
     }
 
     section p {
@@ -151,7 +166,7 @@
         margin-top: 50px;
     }
     
-    @media screen and (min-width: 800px) {
+    @media screen and (min-width: 1200px) {
         section {
             display: flex;
             align-items: center;
@@ -161,3 +176,16 @@
             text-align: center;
         }
     }
+
+    @media screen and (max-width: 600px) {
+        nav ul li a {
+          width: 100%; /* Set the width to 100% of its container */
+          height: auto; /* Allow the height to adjust proportionally based on the width */
+          max-width: 300px; /* Set a maximum width to prevent the image from stretching too much */
+        }
+        #firstapplication a img {
+            width: 100%; /* Set the width to 100% of its container */
+          height: auto; /* Allow the height to adjust proportionally based on the width */
+          max-width: 300px; /* Set a maximum width to prevent the image from stretching too much */
+        }
+      }
